objects/LoyaltyProgramMember.object
<CustomObject>
    <fields>
        <fullName>BrandingPercentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Branding Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Survey_Email_Date__c</fullName>
        <label>Most Recent Survey Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PartnershipStartDate__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Partnership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuarterlyConferenceAttended__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quarterly Conference Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeedData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seed Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TeamTrainedPercentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Team Trained Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>All_Individual_Loyalty_Program_Members</fullName>
        <columns>Name</columns>
        <columns>Contact</columns>
        <columns>EnrollmentDate</columns>
        <columns>MemberType</columns>
        <columns>Program</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MemberType</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Individual Loyalty Program Members</label>
    </listViews>
    <listViews>
        <fullName>All_LoyaltyProgramMembers</fullName>
        <filterScope>Everything</filterScope>
        <label>allLoyaltyProgramMembers</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>